tests/e2e/invalid_return_type3.error
Error: syntax error in story at line 1, column 26

1|    function foo returns List
                               ^

E0053: Unexpected end of line. Expected: ['OSB'].
